# pattreeya-voice-agent

./: .dockerignore  .env.example  .gitignore  .lkignore  AGENTS.md  CHANGELOG.md  Dockerfile  LIVEKIT_CONNECTION_GUIDE.md  MULTILINGUAL_SUPPORT.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_GIT_COMMIT_GUIDE.md  PHASE1_IMPLEMENTATION.md  PHASE1_QUICK_START.md  Plan.md  QUICKSTART.md  REACT_INTEGRATION_GUIDE.md  README.md  ROOM_MANAGEMENT.md  STT_LOGGING.md  docker-compose.yml  livekit.toml  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt
src/: agent.py  agent.ts  config.py  config.ts  db_manager.py  db_manager.ts  exceptions.ts  index.ts  mcp_client.py  mcp_client.ts  mcp_server.py  mcp_server.ts  prompts.py  prompts.ts  room_manager.py  room_manager.ts  web_server.py  web_server.ts
tests/: test_agent.py  test_agent_integration.py  test_mcp_client.py  test_mcp_server.py
web/: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLOUD_DEPLOYMENT_CHECKLIST.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  app-config.ts  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  render.yaml
web/app/: layout.tsx
web/app/(app)/: layout.tsx  opengraph-image.tsx
web/app/api/connection-details/: route.ts
web/components/app/: chat-transcript.tsx  gate-dialog.tsx  preconnect-message.tsx  session-view.tsx  tile-layout.tsx  view-controller.tsx  welcome-view.tsx
web/components/livekit/agent-control-bar/: track-device-select.tsx
web/hooks/: useConnection.tsx
web/styles/: globals.css
